image visibility issue

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -395,8 +395,9 @@
 }
 .item3 {
     position: relative;
-    background-color: #75b528;;
+    background-color: #75b528;
     background-image: url(/assets/images/bird.png);
+    background-image: url(../images/bird.png);
     background-position: 98% 85%;
     background-repeat: no-repeat;
     grid-area: item3;
